# matching-engine

./: .gitignore  ASSIGNMENT_COMPLETE.md  ASSIGNMENT_COMPLETION_PROOF.md  ASSIGNMENT_STATUS_UPDATED.md  BBO_L2_IMPLEMENTATION.md  BENCHMARK_RESULTS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DAY3_COMPLETE_SUMMARY.md  DAY3_IMPLEMENTATION_COMPLETE.md  DAY3_SUMMARY.md  DAY3_TEST_RESULTS.md  DECISIONS.md  DEMO_FULL_FLOW.ps1  DEMO_INSTRUCTIONS.md  DEMO_SCRIPT.md  FEATURES.md  FINAL_SUMMARY.md  HONEST_STATUS_REPORT.md  HOW_TO_USE_SYSTEM.md  IMPLEMENTATION_COMPLETE.txt  INTEGRATION_TEST_COMPLETE.md  INTEGRATION_TEST_REPORT.md  MARKET_DATA_FIX_SUMMARY.md  NEXT_STEPS.md  OPTIMIZATION_QUICKSTART.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  QUICK_START.md  QUICK_START_COMMANDS.md  README.md  README_UPDATED.md  REDIS_INTEGRATION_COMPLETE.md  REDIS_PATTERN_NOTES.md  REDIS_QUICKSTART.md  REDIS_SETUP_WINDOWS.md  SPECIFICATION.md  SUBMISSION_CHECKLIST.md  SYSTEM_ARCHITECTURE.md  (+16 more)
.cursor/agents/: api-specialist.md  architect.md  code-reviewer.md  matching-engine-expert.md  test-expert.md
benchmark/: benchmark.ps1  cpp_engine_benchmark.ps1  performance_test.py  quick_benchmark.ps1  quick_test.py  redis_direct_benchmark.py
market-data/: requirements.txt
market-data/src/: main.py  main_optimized.py
market-data/tests/: __init__.py  test_websocket.py
matching-engine/: CMakeLists.txt
matching-engine/python/: matching_engine.py  redis_engine_runner.py
matching-engine/src/: CMakeLists.txt  engine_runner.cpp  json_utils.hpp  logger.hpp  matching_engine.cpp  matching_engine.hpp  matching_engine_optimized.hpp  order.hpp  order_book.cpp  order_book.hpp  redis_client.hpp
matching-engine/tests/: CMakeLists.txt  test_matching_engine.cpp  test_order_book.cpp
order-gateway/: requirements.txt  setup.py
order-gateway/src/: __init__.py  constants.py  main.py  models.py  redis_client.py  redis_client_optimized.py
order-gateway/src/order_gateway.egg-info/: PKG-INFO  SOURCES.txt
order-gateway/tests/: __init__.py  test_api.py
python-engine-wrapper/: engine_wrapper.py
scripts/: run_benchmark.ps1  setup_python_env.ps1  start_all_services.ps1  test_order_gateway.ps1
tests/: requirements.txt
tests/integration/: test_end_to_end.py
